# SLaRC-LightSeeker-HT25

docs/: Documentation (kopia).md  Documentation.md
docs/DOC-Files/: DOC-001-Bill_Of_Materials.csv  DOC-001-Bill_Of_Materials.ods  DOC-001-Bill_Of_Materials.xlsx
motor_ws/s_robot/: .gitignore  CMakeLists.txt  package.xml
motor_ws/s_robot/motor_controller/: main.py
motor_ws/s_robot/utils/motor/: __init__.py  can_bus.py  motor_api.py  motor_odometry.py  motor_telemetry.py  packers.py
motor_ws/teleop_control/: CMakeLists.txt  package.xml
motor_ws/teleop_control/launch/: joy.yaml  teleop_joy.launch.py
motor_ws/teleop_control/src/: teleop_joy.py  teleop_keyboard.cpp
src/: CANCommunication  can_bus_battery.py  communication_handler  communication_handler.hpp  communication_handler.py  torque_test.py
src/ugv_ws/: can_bus.py  motor_api.py  motor_group.py  motor_handler.hpp  motor_odometry.py  motor_telemetry.py  motors.py  packers.py
